--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
+    "concurrently": "^7.2.0",
     "esbuild": "^0.14.39",
     "jest": "^28.1.0",
     "ts-jest": "^28.0.2",
@@ -24,6 +25,8 @@
     "build:esm": "tsc -p ./tsconfig.esm.json",
     "build:dist": "ts-node ./esbuild.ts",
     "build:lib": "tsc -p ./tsconfig.lib.json",
-    "test": "jest"
+    "build": "concurrently \"npm run build:esm\" \"npm run build:dist\" \"npm run build:lib\"",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   }
 }
