--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubgiuntu-latest
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x, 18.x]
