--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.1",
   "main": "lib/index.js",
   "module": "esm/index.js",
-  "types": "dist/index.d.ts",
+  "typings": "lib/index.d.ts",
   "license": "MIT",
   "author": {
     "name": "Seymour Zhang",
