--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "levent",
-  "version": "0.3.0",
+  "name": "tevent",
+  "version": "0.3.1",
   "main": "lib/index.js",
   "module": "esm/index.js",
   "typings": "lib/index.d.ts",
@@ -28,5 +28,9 @@
     "build": "concurrently \"npm run build:esm\" \"npm run build:dist\" \"npm run build:lib\"",
     "test": "jest",
     "test:coverage": "jest --coverage"
+  },
+  "peerDependencies": {
+    "react": "^18.1.0",
+    "vue": "^3.2.36"
   }
 }
