--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tevent",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "main": "lib/index.js",
   "module": "esm/index.js",
   "typings": "lib/index.d.ts",
@@ -16,6 +16,7 @@
     "concurrently": "^7.2.0",
     "esbuild": "^0.14.39",
     "jest": "^28.1.0",
+    "react": "^18.1.0",
     "ts-jest": "^28.0.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
