--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tevent",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "main": "lib/index.js",
   "module": "esm/index.js",
   "typings": "lib/index.d.ts",
@@ -13,13 +13,15 @@
   "devDependencies": {
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
+    "@types/react": "^18.0.10",
     "concurrently": "^7.2.0",
     "esbuild": "^0.14.39",
     "jest": "^28.1.0",
     "react": "^18.1.0",
     "ts-jest": "^28.0.2",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "vue": "^3.2.36"
   },
   "sideEffects": false,
   "scripts": {
