--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.10",
     "concurrently": "^7.2.0",
     "esbuild": "^0.14.39",
+    "husky": "^8.0.1",
     "jest": "^28.1.0",
     "react": "^18.1.0",
     "ts-jest": "^28.0.2",
